Prefix form classes.

--- a/examples/screenshots/forms.html
+++ b/examples/screenshots/forms.html
@@ -34,104 +34,104 @@
     </fieldset>
     <fieldset>
       <legend>Checkbox and Radio Groups</legend>
-      <label class="checkbox">
+      <label class="rs-checkbox">
         <input type="checkbox">
         Option One
       </label>
-      <label class="checkbox">
+      <label class="rs-checkbox">
         <input type="checkbox">
         Option Two
       </label>
-      <label class="radio">
+      <label class="rs-radio">
         <input type="radio">
         Option One
       </label>
-      <label class="radio">
+      <label class="rs-radio">
         <input type="radio">
         Option Two
       </label>
     </fieldset>
     <fieldset>
       <legend>Inline Checkbox and Radio Groups</legend>
-      <label class="checkbox inline">
+      <label class="rs-checkbox inline">
         <input type="checkbox">
         Option One
       </label>
-      <label class="checkbox inline">
+      <label class="rs-checkbox inline">
         <input type="checkbox">
         Option Two
       </label>
-      <label class="radio inline">
+      <label class="rs-radio inline">
         <input type="radio">
         Option One
       </label>
-      <label class="radio inline">
+      <label class="rs-radio inline">
         <input type="radio">
         Option Two
       </label>
     </fieldset>
     <fieldset>
       <legend>Input Sizes</legend>
-      <input type="text" class="input-mini"><br>
-      <input type="text" class="input-small"><br>
-      <input type="text" class="input-medium"><br>
-      <input type="text" class="input-large"><br>
-      <input type="text" class="input-xlarge"><br>
-      <input type="text" class="input-xxlarge"><br>
-      <textarea class="input-mini"></textarea><br>
-      <textarea class="input-small"></textarea><br>
-      <textarea class="input-medium"></textarea><br>
-      <textarea class="input-large"></textarea><br>
-      <textarea class="input-xlarge"></textarea><br>
-      <textarea class="input-xxlarge"></textarea><br>
+      <input type="text" class="rs-input-mini"><br>
+      <input type="text" class="rs-input-small"><br>
+      <input type="text" class="rs-input-medium"><br>
+      <input type="text" class="rs-input-large"><br>
+      <input type="text" class="rs-input-xlarge"><br>
+      <input type="text" class="rs-input-xxlarge"><br>
+      <textarea class="rs-input-mini"></textarea><br>
+      <textarea class="rs-input-small"></textarea><br>
+      <textarea class="rs-input-medium"></textarea><br>
+      <textarea class="rs-input-large"></textarea><br>
+      <textarea class="rs-input-xlarge"></textarea><br>
+      <textarea class="rs-input-xxlarge"></textarea><br>
     </fieldset>
   </form>
-  <form class="form-horizontal">
+  <form class="rs-form-horizontal">
     <fieldset>
       <legend>Horizontal Form</legend>
-      <div class="control-group">
-        <label class="control-label">One</label>
-        <div class="controls">
+      <div class="rs-control-group">
+        <label class="rs-control-label">One</label>
+        <div class="rs-controls">
           <input type="text">
-          <span class="help-inline">This is inline help text.</span>
+          <span class="rs-help-inline">This is inline help text.</span>
         </div>
       </div>
-      <div class="control-group success">
-        <label class="control-label">Two</label>
-        <div class="controls">
+      <div class="rs-control-group success">
+        <label class="rs-control-label">Two</label>
+        <div class="rs-controls">
           <select>
             <option>One</option>
             <option>Two</option>
           </select>
-          <span class="validation-inline"><i class="icon-ok-circle"></i>Everything works!</span>
+          <span class="rs-validation-inline"><i class="icon-ok-circle"></i>Everything works!</span>
         </div>
       </div>
-      <div class="control-group error">
-        <label class="control-label">Three</label>
-        <div class="controls">
-          <label class="radio">
+      <div class="rs-control-group error">
+        <label class="rs-control-label">Three</label>
+        <div class="rs-controls">
+          <label class="rs-radio">
             <input type="radio" name="three">
             <strong>A</strong><br>
-            <span class="help-block">A Sub</span>
+            <span class="rs-help-block">A Sub</span>
           </label>
-          <label class="radio">
+          <label class="rs-radio">
             <input type="radio" name="three">
             <strong>B</strong>
-            <span class="help-block">B-Sub</span>
+            <span class="rs-help-block">B-Sub</span>
           </label>
-          <span class="validation-block"><i class="icon-exclamation-sign"></i>You should at least select one item.</span>
+          <span class="rs-validation-block"><i class="icon-exclamation-sign"></i>You should at least select one item.</span>
         </div>
       </div>
-      <div class="control-group">
-        <label class="control-label">Four</label>
-        <div class="controls">
+      <div class="rs-control-group">
+        <label class="rs-control-label">Four</label>
+        <div class="rs-controls">
           <input type="text"> GB
-          <span class="help-block">This is some subtext.</span>
+          <span class="rs-help-block">This is some subtext.</span>
         </div>
       </div>
-      <div class="control-group">
-        <label class="control-label">Five</label>
-        <div class="controls">
+      <div class="rs-control-group">
+        <label class="rs-control-label">Five</label>
+        <div class="rs-controls">
           <input type="text">
           <select>
             <option>One</option>
@@ -139,14 +139,14 @@
           </select>
         </div>
       </div>
-      <div class="control-group">
-        <label class="control-label">Six</label>
-        <div class="controls">
+      <div class="rs-control-group">
+        <label class="rs-control-label">Six</label>
+        <div class="rs-controls">
           <textarea></textarea>
         </div>
       </div>
-      <div class="control-group error">
-        <span class="validation-block"><i class="icon-exclamation-sign"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      <div class="rs-control-group error">
+        <span class="rs-validation-block"><i class="icon-exclamation-sign"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
         consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
