--- a/examples/screenshots/layout-responsive.html
+++ b/examples/screenshots/layout-responsive.html
@@ -22,12 +22,12 @@
     <div class="nav-utility fixed-top">
       <div class="l-container">
         <ul class="nav">
-          <li class="dropdown utility-dropdown active">
+          <li class="rs-dropdown rs-utility-dropdown active">
             <a href="#">Link One</a>
-            <ul class="dropdown-menu visible">
+            <ul class="rs-dropdown-menu visible">
               <li><a href="#">One</a></li>
               <li><a href="#">Two</a></li>
-              <li class="divider"></li>
+              <li class="rs-divider"></li>
               <li><a href="#">Three</a></li>
             </ul>
           </li>
@@ -45,14 +45,14 @@
           <li><a href="#">Link One</a></li>
           <li class="hover"><a href="#">Link Two</a></li>
           <li class="active"><a href="#">Link Three</a></li>
-          <li class="dropdown primary-dropdown active">
-            <a href="#">Link Four <i class="dropdown-toggle"></i></a>
-            <ul class="dropdown-menu visible">
-              <li><span class="dropdown-category">Category</span></li>
+          <li class="rs-dropdown rs-primary-dropdown active">
+            <a href="#">Link Four <i class="rs-dropdown-toggle"></i></a>
+            <ul class="rs-dropdown-menu visible">
+              <li><span class="rs-dropdown-category">Category</span></li>
               <li><a href="#">One</a></li>
               <li><a href="#">Two</a></li>
               <li>
-                <a href="#">This is a really long link <i class="icon-external"></i> <span class="dropdown-caption">And I have a caption.</a>
+                <a href="#">This is a really long link <i class="icon-external"></i> <span class="rs-dropdown-caption">And I have a caption.</a>
               </li>
             </ul>
           </li>
