--- a/examples/screenshots/menu.html
+++ b/examples/screenshots/menu.html
@@ -10,84 +10,84 @@
 </head>
 <body class="responsive" style="background: #fff;">
   <div style="padding: 40px;">
-    <div class="dropdown">
-      <a href="#" class="rs-btn dropdown-toggle">Action Menu (Hidden)</a>
-      <ul class="dropdown-menu">
-        <li><span class="dropdown-category">Links</span></li>
+    <div class="rs-dropdown">
+      <a href="#" class="rs-btn rs-dropdown-toggle">Action Menu (Hidden)</a>
+      <ul class="rs-dropdown-menu">
+        <li><span class="rs-dropdown-category">Links</span></li>
         <li><a href="#">One</a></li>
         <li><a href="#">Two</a></li>
-        <li><span class="dropdown-category">More Links</span></li>
+        <li><span class="rs-dropdown-category">More Links</span></li>
         <li><a href="#">Three</a></li>
         <li><a href="#">Four</a></li>
       </ul>
     </div>
-    <div class="dropdown">
-      <a href="#" class="rs-btn dropdown-toggle">Action Menu (Visible)</a>
-      <ul class="dropdown-menu visible">
-        <li><span class="dropdown-category">Links</span></li>
+    <div class="rs-dropdown">
+      <a href="#" class="rs-btn rs-dropdown-toggle">Action Menu (Visible)</a>
+      <ul class="rs-dropdown-menu visible">
+        <li><span class="rs-dropdown-category">Links</span></li>
         <li><a href="#">One</a></li>
         <li><a href="#">Two</a></li>
-        <li><span class="dropdown-category">More Links</span></li>
+        <li><span class="rs-dropdown-category">More Links</span></li>
         <li><a href="#">Three</a></li>
         <li><a href="#">Four</a></li>
       </ul>
     </div>
-    <div class="dropdown utility-dropdown">
-      <a href="#" class="rs-btn dropdown-toggle">Utility Menu (Hidden)</a>
-      <ul class="dropdown-menu">
+    <div class="rs-dropdown rs-utility-dropdown">
+      <a href="#" class="rs-btn rs-dropdown-toggle">Utility Menu (Hidden)</a>
+      <ul class="rs-dropdown-menu">
         <li><span>Non Link Text</span></li>
-        <li class="divider"></li>
+        <li class="rs-divider"></li>
         <li><a href="#">Link</a></li>
         <li><a href="#" class="hover">Link (Hover)</a></li>
-        <li class="divider"></li>
+        <li class="rs-divider"></li>
         <li><a href="#">Link External <i class="icon-external"></i></a></li>
         <li><a href="#" class="hover">Link External (Hover) <i class="icon-external"></i></a></li>
-        <li class="divider"></li>
-        <li><a href="#">Link <span class="dropdown-caption">With Caption</span></a></li>
-        <li><a href="#" class="hover">Link (Hover) <span class="dropdown-caption">With Caption</span></a></li>
+        <li class="rs-divider"></li>
+        <li><a href="#">Link <span class="rs-dropdown-caption">With Caption</span></a></li>
+        <li><a href="#" class="hover">Link (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
       </ul>
     </div>
-    <div class="dropdown utility-dropdown">
-      <a href="#" class="rs-btn dropdown-toggle">Utility Menu (Visible)</a>
-      <ul class="dropdown-menu visible">
+    <div class="rs-dropdown rs-utility-dropdown">
+      <a href="#" class="rs-btn rs-dropdown-toggle">Utility Menu (Visible)</a>
+      <ul class="rs-dropdown-menu visible">
         <li><span>Non Link Text</span></li>
-        <li class="divider"></li>
+        <li class="rs-divider"></li>
         <li><a href="#">Link</a></li>
         <li><a href="#" class="hover">Link (Hover)</a></li>
-        <li class="divider"></li>
+        <li class="rs-divider"></li>
         <li><a href="#">Link External <i class="icon-external"></i></a></li>
         <li><a href="#" class="hover">Link External (Hover) <i class="icon-external"></i></a></li>
-        <li class="divider"></li>
-        <li><a href="#">Link <span class="dropdown-caption">With Caption</span></a></li>
-        <li><a href="#" class="hover">Link (Hover) <span class="dropdown-caption">With Caption</span></a></li>
+        <li class="rs-divider"></li>
+        <li><a href="#">Link <span class="rs-dropdown-caption">With Caption</span></a></li>
+        <li><a href="#" class="hover">Link (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
       </ul>
     </div>
-    <div class="dropdown primary-dropdown">
-      <a href="#" class="rs-btn dropdown-toggle">Primary Menu (Hidden)</a>
-      <ul class="dropdown-menu">
-        <li><span class="dropdown-category">Links</span></li>
+    <div class="rs-dropdown rs-primary-dropdown">
+      <a href="#" class="rs-btn rs-dropdown-toggle">Primary Menu (Hidden)</a>
+      <ul class="rs-dropdown-menu">
+        <li><span class="rs-dropdown-category">Links</span></li>
         <li><a href="#">Link</a></li>
         <li><a href="#" class="hover">Link (Hover)</a></li>
-        <li><span class="dropdown-category">External</span></li>
+        <li><span class="rs-dropdown-category">External</span></li>
         <li><a href="#">Link External <i class="icon-external"></i></a></li>
         <li><a href="#" class="hover">Link External (Hover) <i class="icon-external"></i></a></li>
-        <li><span class="dropdown-category">Captions</span></li>
-        <li><a href="#">Link <span class="dropdown-caption">With Caption</span></a></li>
-        <li><a href="#" class="hover">Link (Hover) <span class="dropdown-caption">With Caption</span></a></li>
+        <li><span class="rs-dropdown-category">Captions</span></li>
+        <li><a href="#">Link <span class="rs-dropdown-caption">With Caption</span></a></li>
+        <li><a href="#" class="hover">Link (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
       </ul>
     </div>
-    <div class="dropdown primary-dropdown">
-      <a href="#" class="rs-btn dropdown-toggle">Primary Menu (Visible)</a>
-      <ul class="dropdown-menu visible">
-        <li><span class="dropdown-category">Links</span></li>
+    <div class="rs-dropdown rs-primary-dropdown">
+      <a href="#" class="rs-btn rs-dropdown-toggle">Primary Menu (Visible)</a>
+      <ul class="rs-dropdown-menu visible">
+        <li><span class="rs-dropdown-category">Links</span></li>
         <li><a href="#">Link</a></li>
         <li><a href="#" class="hover">Link (Hover)</a></li>
-        <li><span class="dropdown-category">External</span></li>
+        <li><span class="rs-dropdown-category">External</span></li>
         <li><a href="#">Link External <i class="icon-external"></i></a></li>
         <li><a href="#" class="hover">Link External (Hover) <i class="icon-external"></i></a></li>
-        <li><span class="dropdown-category">Captions</span></li>
-        <li><a href="#">Link <span class="dropdown-caption">With Caption</span></a></li>
-        <li><a href="#" class="hover">Link (Hover) <span class="dropdown-caption">With Caption</span></a></li>
+        <li><span class="rs-dropdown-category">Captions</span></li>
+        <li><a href="#">Link <span class="rs-dropdown-caption">With Caption</span></a></li>
+        <li><a href="#" class="hover">Link (Hover) <span class="rs-dropdown-caption">With Caption</span></a></li>
       </ul>
     </div>
   </div>
