Prefix tooltip class.

--- a/examples/screenshots/tooltip.html
+++ b/examples/screenshots/tooltip.html
@@ -11,13 +11,13 @@
 <body class="responsive">
   <div style="padding: 40px">
     <p><i class="icon-help"></i></p>
-    <div class="tooltip">
-      <div class="tooltip-inner">
+    <div class="rs-tooltip">
+      <div class="rs-tooltip-inner">
         Tooltips are hidden by default.
       </div>
     </div>
-    <div class="tooltip visible">
-      <div class="tooltip-inner">
+    <div class="rs-tooltip visible">
+      <div class="rs-tooltip-inner">
         This tooltip is visible.
       </div>
     </div>
