--- a/examples/screenshots/layout-responsive.html
+++ b/examples/screenshots/layout-responsive.html
@@ -113,136 +113,136 @@
       </div>
       <!-- Grid -->
       <div class="l-container show-grid">
-        <div class="row">
-          <div class="span-12">.full or .span-12</div>
+        <div class="rs-row">
+          <div class="span-12">.span-12</div>
         </div>
-        <div class="row">
+        <div class="rs-row">
           <div class="span-1">.span-1</div>
           <div class="span-11">.span-11</div>
         </div>
-        <div class="row">
+        <div class="rs-row">
           <div class="span-2">.span-2</div>
           <div class="span-10">.span-10</div>
         </div>
-        <div class="row">
+        <div class="rs-row">
           <div class="span-3">.span-3</div>
           <div class="span-9">.span-9</div>
         </div>
-        <div class="row">
+        <div class="rs-row">
           <div class="span-4">.span-4</div>
           <div class="span-8">.span-8</div>
         </div>
-        <div class="row">
+        <div class="rs-row">
           <div class="span-5">.span-5</div>
           <div class="span-7">.span-7</div>
         </div>
-        <div class="row">
+        <div class="rs-row">
           <div class="span-6">.span-6</div>
           <div class="span-6">.span-6</div>
         </div>
-        <div class="row">
+        <div class="rs-row">
           <div class="span-7">.span-7</div>
           <div class="span-5">.span-5</div>
         </div>
-        <div class="row">
+        <div class="rs-row">
           <div class="span-8">.span-8</div>
           <div class="span-4">.span-4</div>
         </div>
-        <div class="row">
+        <div class="rs-row">
           <div class="span-9">.span-9</div>
           <div class="span-3">.span-3</div>
         </div>
-        <div class="row">
+        <div class="rs-row">
           <div class="span-10">.span-10</div>
           <div class="span-2">.span-2</div>
         </div>
-        <div class="row">
+        <div class="rs-row">
           <div class="span-11">.span-11</div>
           <div class="span-1">.span-1</div>
         </div>
       </div>
       <div class="l-container show-grid">
-        <div class="row">
+        <div class="rs-row">
           <div class="span-5">
             <p>.span-5</p>
-            <div class="row">
+            <div class="rs-row">
               <div class="span-3">.span-3</div>
               <div class="span-9">.span-9</div>
             </div>
           </div>
           <div class="span-7">
             <p>.span-7</p>
-            <div class="row">
-              <div class="span-7">.span-2-7</div>
-              <div class="span-5">.span-5-7</div>
+            <div class="rs-row">
+              <div class="span-7">.span-7</div>
+              <div class="span-5">.span-5</div>
             </div>
           </div>
         </div>
       </div>
 
       <div class="l-container show-grid">
-        <div class="row collapse">
-          <div class="span-12">.full or .span-12</div>
+        <div class="rs-row-collapse">
+          <div class="span-12">.span-12</div>
         </div>
-        <div class="row collapse">
+        <div class="rs-row-collapse">
           <div class="span-1">.span-1</div>
           <div class="span-11">.span-11</div>
         </div>
-        <div class="row collapse">
+        <div class="rs-row-collapse">
           <div class="span-2">.span-2</div>
           <div class="span-10">.span-10</div>
         </div>
-        <div class="row collapse">
+        <div class="rs-row-collapse">
           <div class="span-3">.span-3</div>
           <div class="span-9">.span-9</div>
         </div>
-        <div class="row collapse">
+        <div class="rs-row-collapse">
           <div class="span-4">.span-4</div>
           <div class="span-8">.span-8</div>
         </div>
-        <div class="row collapse">
+        <div class="rs-row-collapse">
           <div class="span-5">.span-5</div>
           <div class="span-7">.span-7</div>
         </div>
-        <div class="row collapse">
+        <div class="rs-row-collapse">
           <div class="span-6">.span-6</div>
           <div class="span-6">.span-6</div>
         </div>
-        <div class="row collapse">
+        <div class="rs-row-collapse">
           <div class="span-7">.span-7</div>
           <div class="span-5">.span-5</div>
         </div>
-        <div class="row collapse">
+        <div class="rs-row-collapse">
           <div class="span-8">.span-8</div>
           <div class="span-4">.span-4</div>
         </div>
-        <div class="row collapse">
+        <div class="rs-row-collapse">
           <div class="span-9">.span-9</div>
           <div class="span-3">.span-3</div>
         </div>
-        <div class="row collapse">
+        <div class="rs-row-collapse">
           <div class="span-10">.span-10</div>
           <div class="span-2">.span-2</div>
         </div>
-        <div class="row collapse">
+        <div class="rs-row-collapse">
           <div class="span-11">.span-11</div>
           <div class="span-1">.span-1</div>
         </div>
       </div>
       <div class="l-container show-grid">
-        <div class="row collapse">
+        <div class="rs-row-collapse">
           <div class="span-5">
             <p>.span-5</p>
-            <div class="row collapse">
+            <div class="rs-row-collapse">
               <div class="span-3">.span-3</div>
               <div class="span-9">.span-9</div>
             </div>
           </div>
           <div class="span-7">
             <p>.span-7</p>
-            <div class="row collapse">
-              <div class="span-7">.span-2-7</div>
-              <div class="span-5">.span-5-7</div>
+            <div class="rs-row-collapse">
+              <div class="span-7">.span-7</div>
+              <div class="span-5">.span-5</div>
             </div>
           </div>
         </div>
@@ -251,136 +251,136 @@
 
       <!-- small-column -->
       <div class="l-container show-grid">
-        <div class="row">
-          <div class="small-span-12">.full or .small-span-12</div>
+        <div class="rs-row">
+          <div class="small-span-12">.small-span-12</div>
         </div>
-        <div class="row">
+        <div class="rs-row">
           <div class="small-span-1">.small-span-1</div>
           <div class="small-span-11">.small-span-11</div>
         </div>
-        <div class="row">
+        <div class="rs-row">
           <div class="small-span-2">.small-span-2</div>
           <div class="small-span-10">.small-span-10</div>
         </div>
-        <div class="row">
+        <div class="rs-row">
           <div class="small-span-3">.small-span-3</div>
           <div class="small-span-9">.small-span-9</div>
         </div>
-        <div class="row">
+        <div class="rs-row">
           <div class="small-span-4">.small-span-4</div>
           <div class="small-span-8">.small-span-8</div>
         </div>
-        <div class="row">
+        <div class="rs-row">
           <div class="small-span-5">.small-span-5</div>
           <div class="small-span-7">.small-span-7</div>
         </div>
-        <div class="row">
+        <div class="rs-row">
           <div class="small-span-6">.small-span-6</div>
           <div class="small-span-6">.small-span-6</div>
         </div>
-        <div class="row">
+        <div class="rs-row">
           <div class="small-span-7">.small-span-7</div>
           <div class="small-span-5">.small-span-5</div>
         </div>
-        <div class="row">
+        <div class="rs-row">
           <div class="small-span-8">.small-span-8</div>
           <div class="small-span-4">.small-span-4</div>
         </div>
-        <div class="row">
+        <div class="rs-row">
           <div class="small-span-9">.small-span-9</div>
           <div class="small-span-3">.small-span-3</div>
         </div>
-        <div class="row">
+        <div class="rs-row">
           <div class="small-span-10">.small-span-10</div>
           <div class="small-span-2">.small-span-2</div>
         </div>
-        <div class="row">
+        <div class="rs-row">
           <div class="small-span-11">.small-span-11</div>
           <div class="small-span-1">.small-span-1</div>
         </div>
       </div>
       <div class="l-container show-grid">
-        <div class="row">
+        <div class="rs-row">
           <div class="small-span-5">
             <p>.small-span-5</p>
-            <div class="row">
+            <div class="rs-row">
               <div class="small-span-3">.small-span-3</div>
               <div class="small-span-9">.small-span-9</div>
             </div>
           </div>
           <div class="small-span-7">
             <p>.small-span-7</p>
-            <div class="row">
-              <div class="small-span-7">.small-span-2-7</div>
-              <div class="small-span-5">.small-span-5-7</div>
+            <div class="rs-row">
+              <div class="small-span-7">.small-span-7</div>
+              <div class="small-span-5">.small-span-5</div>
             </div>
           </div>
         </div>
       </div>
 
       <div class="l-container show-grid">
-        <div class="row collapse">
-          <div class="small-span-12">.full or .small-span-12</div>
+        <div class="rs-row-collapse">
+          <div class="small-span-12">.small-span-12</div>
         </div>
-        <div class="row collapse">
+        <div class="rs-row-collapse">
           <div class="small-span-1">.small-span-1</div>
           <div class="small-span-11">.small-span-11</div>
         </div>
-        <div class="row collapse">
+        <div class="rs-row-collapse">
           <div class="small-span-2">.small-span-2</div>
           <div class="small-span-10">.small-span-10</div>
         </div>
-        <div class="row collapse">
+        <div class="rs-row-collapse">
           <div class="small-span-3">.small-span-3</div>
           <div class="small-span-9">.small-span-9</div>
         </div>
-        <div class="row collapse">
+        <div class="rs-row-collapse">
           <div class="small-span-4">.small-span-4</div>
           <div class="small-span-8">.small-span-8</div>
         </div>
-        <div class="row collapse">
+        <div class="rs-row-collapse">
           <div class="small-span-5">.small-span-5</div>
           <div class="small-span-7">.small-span-7</div>
         </div>
-        <div class="row collapse">
+        <div class="rs-row-collapse">
           <div class="small-span-6">.small-span-6</div>
           <div class="small-span-6">.small-span-6</div>
         </div>
-        <div class="row collapse">
+        <div class="rs-row-collapse">
           <div class="small-span-7">.small-span-7</div>
           <div class="small-span-5">.small-span-5</div>
         </div>
-        <div class="row collapse">
+        <div class="rs-row-collapse">
           <div class="small-span-8">.small-span-8</div>
           <div class="small-span-4">.small-span-4</div>
         </div>
-        <div class="row collapse">
+        <div class="rs-row-collapse">
           <div class="small-span-9">.small-span-9</div>
           <div class="small-span-3">.small-span-3</div>
         </div>
-        <div class="row collapse">
+        <div class="rs-row-collapse">
           <div class="small-span-10">.small-span-10</div>
           <div class="small-span-2">.small-span-2</div>
         </div>
-        <div class="row collapse">
+        <div class="rs-row-collapse">
           <div class="small-span-11">.small-span-11</div>
           <div class="small-span-1">.small-span-1</div>
         </div>
       </div>
       <div class="l-container show-grid">
-        <div class="row collapse">
+        <div class="rs-row-collapse">
           <div class="small-span-5">
             <p>.small-span-5</p>
-            <div class="row collapse">
+            <div class="rs-row-collapse">
               <div class="small-span-3">.small-span-3</div>
               <div class="small-span-9">.small-span-9</div>
             </div>
           </div>
           <div class="small-span-7">
             <p>.small-span-7</p>
-            <div class="row collapse">
-              <div class="small-span-7">.small-span-2-7</div>
-              <div class="small-span-5">.small-span-5-7</div>
+            <div class="rs-row-collapse">
+              <div class="small-span-7">.small-span-7</div>
+              <div class="small-span-5">.small-span-5</div>
             </div>
           </div>
         </div>
