--- a/examples/screenshots/layout-fixed.html
+++ b/examples/screenshots/layout-fixed.html
@@ -12,7 +12,7 @@
   <div class="l-wrapper">
     <div class="nav-utility fixed-top">
       <div class="l-container">
-        <ul class="nav">
+        <ul class="rs-nav">
           <li class="rs-dropdown rs-utility-dropdown active">
             <a href="#">Link One</a>
             <ul class="rs-dropdown-menu visible">
@@ -32,7 +32,7 @@
         <div class="nav-brand">
           <a href="#"></a>
         </div>
-        <ul class="nav">
+        <ul class="rs-nav">
           <li><a href="#">Link One</a></li>
           <li class="hover"><a href="#">Link Two</a></li>
           <li class="active"><a href="#">Link Three</a></li>
@@ -52,7 +52,7 @@
     </div>
     <div class="nav-secondary fixed-top">
       <div class="l-container">
-        <ul class="nav">
+        <ul class="rs-nav">
           <li><a href="#">Link One</a></li>
           <li class="hover"><a href="#">Link Two</a></li>
           <li class="active"><a href="#">Link Three</a></li>
