Prefix primary nav.

--- a/examples/screenshots/layout-fixed.html
+++ b/examples/screenshots/layout-fixed.html
@@ -27,9 +27,9 @@
         </ul>
       </div>
     </div>
-    <div class="nav-primary fixed-top">
+    <div class="rs-nav-primary fixed-top">
       <div class="l-container">
-        <div class="nav-brand">
+        <div class="rs-nav-brand">
           <a href="#"></a>
         </div>
         <ul class="rs-nav">
