Prefix utility nav.

--- a/examples/screenshots/layout-fixed.html
+++ b/examples/screenshots/layout-fixed.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="l-wrapper">
-    <div class="nav-utility fixed-top">
+    <div class="rs-nav-utility fixed-top">
       <div class="l-container">
         <ul class="rs-nav">
           <li class="rs-dropdown rs-utility-dropdown active">
