Prefix secondary nav.

--- a/examples/screenshots/layout-fixed.html
+++ b/examples/screenshots/layout-fixed.html
@@ -50,7 +50,7 @@
         </ul>
       </div>
     </div>
-    <div class="nav-secondary fixed-top">
+    <div class="rs-nav-secondary fixed-top">
       <div class="l-container">
         <ul class="rs-nav">
           <li><a href="#">Link One</a></li>
