--- a/examples/demos/layout.html
+++ b/examples/demos/layout.html
@@ -38,7 +38,7 @@
     <div class="l-body">
       <div class="l-container">
         <div class="main">
-          <div class="content panel">
+          <div class="content rs-panel">
             <div class="inner">
               <h1>Typography</h1>
               <h2>Typography</h2>
@@ -98,7 +98,7 @@
         <li><a href="">Link Text</a></li>
         <li><a href="">Link Text</a></li>
       </ul>
-      <p class="link pull-right">Lorem Ipsum and <a href="#">Feedback</a></p>
+      <p class="link rs-pull-right">Lorem Ipsum and <a href="#">Feedback</a></p>
     </div>
   </div>
 </body>
