--- a/examples/screenshots/layout-responsive.html
+++ b/examples/screenshots/layout-responsive.html
@@ -66,40 +66,40 @@
           <div class="sidebar">
             <div class="inner"></div>
           </div>
-          <div class="content panel">
+          <div class="content rs-panel">
             <div class="inner"></div>
           </div>
         </div>
         <!-- Sidebar (Left, Panel) -->
-        <div class="main panel">
+        <div class="main rs-panel">
           <div class="sidebar">
             <div class="inner"></div>
           </div>
-          <div class="content panel">
+          <div class="content rs-panel">
             <div class="inner"></div>
           </div>
         </div>
         <!-- Sidebar (Left) -->
         <div class="main">
-          <div class="sidebar pull-right">
+          <div class="sidebar rs-pull-right">
             <div class="inner"></div>
           </div>
-          <div class="content panel">
+          <div class="content rs-panel">
             <div class="inner"></div>
           </div>
         </div>
         <!-- Sidebar (Left, Panel) -->
-        <div class="main panel">
-          <div class="sidebar pull-right">
+        <div class="main rs-panel">
+          <div class="sidebar rs-pull-right">
             <div class="inner"></div>
           </div>
-          <div class="content panel">
+          <div class="content rs-panel">
             <div class="inner"></div>
           </div>
         </div>
         <!-- Full-Width Content -->
         <div class="main">
-          <div class="content panel"></div>
+          <div class="content rs-panel"></div>
         </div>
       </div>
       <!-- Grid -->
@@ -174,7 +174,7 @@
         <li><a href="">Link Text</a></li>
         <li><a href="">Link Text</a></li>
       </ul>
-      <p class="link pull-right">Pull right for <a href="#">Feedback</a></p>
+      <p class="link rs-pull-right">Pull right for <a href="#">Feedback</a></p>
     </div>
   </div>
 </body>
