Prefix layout classes.

--- a/examples/demos/grid.html
+++ b/examples/demos/grid.html
@@ -17,23 +17,23 @@
     }
   </style>
 </head>
-<body class="responsive">
-  <div class="l-wrapper">
-    <div class="nav-utility fixed-top">
-      <div class="l-container">
-          <ul class="nav">
+<body class="rs-responsive">
+  <div class="rs-wrapper">
+    <div class="rs-nav-utility rs-fixed-top">
+      <div class="rs-container">
+          <ul class="rs-nav">
             <li><a href="#">Link One</a></li>
             <li><a href="#">Link Two</a></li>
             <li><a href="#">Link Three</a></li>
           </ul>
       </div>
     </div>
-    <div class="nav-primary fixed-top">
-      <div class="l-container">
-        <div class="nav-brand">
+    <div class="rs-nav-primary rs-fixed-top">
+      <div class="rs-container">
+        <div class="rs-nav-brand">
           <a href="#"></a>
         </div>
-        <ul class="nav">
+        <ul class="rs-nav">
           <li><a href="#">Link One</a></li>
           <li class="active"><a href="#">Link Two</a></li>
           <li><a href="#">Link Three</a></li>
@@ -43,11 +43,11 @@
         </ul>
       </div>
     </div>
-    <div class="l-body">
-      <div class="l-container show-grid">
-        <div class="main rs-panel">
-          <div class="sidebar rs-pull-right">
-            <div class="inner">
+    <div class="rs-body">
+      <div class="rs-container show-grid">
+        <div class="rs-main rs-panel">
+          <div class="rs-sidebar rs-pull-right">
+            <div class="rs-inner">
               <div class="rs-row">
                 <div class="span-12">.span-12</div>
               </div>
@@ -57,8 +57,8 @@
               </div>
             </div>
           </div>
-          <div class="content rs-panel">
-            <div class="inner">
+          <div class="rs-content rs-panel">
+            <div class="rs-inner">
               <p>12 column grid</p>
               <div class="rs-row">
                 <div class="span-12">.span-12</div>
@@ -588,16 +588,16 @@
       <!-- l-container -->
     </div>
     <!-- l-body -->
-    <div class="l-push"></div>
+    <div class="rs-push"></div>
   </div>
-  <div class="l-footer">
-    <div class="footer l-container">
-      <ul class="links">
+  <div class="rs-footer">
+    <div class="rs-container">
+      <ul class="rs-links">
         <li>&copy; 2013 Rackspace, US</li>
         <li><a href="">Link Text</a></li>
         <li><a href="">Link Text</a></li>
       </ul>
-      <p class="link rs-pull-right">Lorem Ipsum and <a href="#">Feedback</a></p>
+      <p class="rs-link rs-pull-right">Lorem Ipsum and <a href="#">Feedback</a></p>
     </div>
   </div>
 </body>
