--- a/examples/demos/layout.html
+++ b/examples/demos/layout.html
@@ -9,23 +9,23 @@
   <link rel="stylesheet" type="text/css" href="/assets/canon.css">
 </head>
 <body>
-<body class="responsive">
-  <div class="l-wrapper">
-    <div class="nav-utility">
-      <div class="l-container">
-          <ul class="nav">
+<body class="rs-responsive">
+  <div class="rs-wrapper">
+    <div class="rs-nav-utility">
+      <div class="rs-container">
+          <ul class="rs-nav">
             <li><a href="#">Link One</a></li>
             <li><a href="#">Link Two</a></li>
             <li><a href="#">Link Three</a></li>
           </ul>
       </div>
     </div>
-    <div class="nav-primary">
-      <div class="l-container">
-        <div class="nav-brand">
+    <div class="rs-nav-primary">
+      <div class="rs-container">
+        <div class="rs-nav-brand">
           <a href="#"></a>
         </div>
-        <ul class="nav">
+        <ul class="rs-nav">
           <li><a href="#">Link One</a></li>
           <li class="active"><a href="#">Link Two</a></li>
           <li><a href="#">Link Three</a></li>
@@ -35,11 +35,11 @@
         </ul>
       </div>
     </div>
-    <div class="l-body">
-      <div class="l-container">
-        <div class="main">
-          <div class="content rs-panel">
-            <div class="inner">
+    <div class="rs-body">
+      <div class="rs-container">
+        <div class="rs-main">
+          <div class="rs-content rs-panel">
+            <div class="rs-inner">
               <h1>Typography</h1>
               <h2>Typography</h2>
               <h3>Typography</h3>
@@ -89,16 +89,16 @@
         </div>
       </div>
     </div>
-    <div class="l-push"></div>
+    <div class="rs-push"></div>
   </div>
-  <div class="l-footer">
-    <div class="footer l-container">
-      <ul class="links">
+  <div class="rs-footer">
+    <div class="rs-container">
+      <ul class="rs-links">
         <li>&copy; 2013 Rackspace, US</li>
         <li><a href="">Link Text</a></li>
         <li><a href="">Link Text</a></li>
       </ul>
-      <p class="link rs-pull-right">Lorem Ipsum and <a href="#">Feedback</a></p>
+      <p class="rs-link rs-pull-right">Lorem Ipsum and <a href="#">Feedback</a></p>
     </div>
   </div>
 </body>
