--- a/examples/screenshots/layout-responsive.html
+++ b/examples/screenshots/layout-responsive.html
@@ -17,10 +17,10 @@
     }
   </style>
 </head>
-<body class="responsive">
-  <div class="l-wrapper">
-    <div class="rs-nav-utility fixed-top">
-      <div class="l-container">
+<body class="rs-responsive">
+  <div class="rs-wrapper">
+    <div class="rs-nav-utility rs-fixed-top">
+      <div class="rs-container">
         <ul class="rs-nav">
           <li class="rs-dropdown rs-utility-dropdown active">
             <a href="#">Link One</a>
@@ -36,8 +36,8 @@
         </ul>
       </div>
     </div>
-    <div class="rs-nav-primary fixed-top">
-      <div class="l-container">
+    <div class="rs-nav-primary rs-fixed-top">
+      <div class="rs-container">
         <div class="rs-nav-brand">
           <a href="#"></a>
         </div>
@@ -59,8 +59,8 @@
         </ul>
       </div>
     </div>
-    <div class="rs-nav-secondary fixed-top">
-      <div class="l-container">
+    <div class="rs-nav-secondary rs-fixed-top">
+      <div class="rs-container">
         <ul class="rs-nav">
           <li><a href="#">Link One</a></li>
           <li class="hover"><a href="#">Link Two</a></li>
@@ -68,52 +68,51 @@
         </ul>
       </div>
     </div>
-    <div class="l-body">
-      <div class="l-container">
+    <div class="rs-body">
+      <div class="rs-container">
         <!-- Sidebar (Left) -->
-        <div class="main">
-          <div class="sidebar">
-            <div class="inner"></div>
+        <div class="rs-main">
+          <div class="rs-sidebar">
+            <div class="rs-inner"></div>
           </div>
-          <div class="content rs-panel">
-            <div class="inner"></div>
+          <div class="rs-content rs-panel">
+            <div class="rs-inner"></div>
           </div>
         </div>
         <!-- Sidebar (Left, Panel) -->
-        <div class="main rs-panel">
-          <div class="sidebar">
-            <div class="inner"></div>
+        <div class="rs-main rs-panel">
+          <div class="rs-sidebar">
+            <div class="rs-inner"></div>
           </div>
-          <div class="content rs-panel">
-            <div class="inner"></div>
+          <div class="rs-content rs-panel">
+            <div class="rs-inner"></div>
           </div>
         </div>
         <!-- Sidebar (Left) -->
-        <div class="main">
-          <div class="sidebar rs-pull-right">
-            <div class="inner"></div>
+        <div class="rs-main">
+          <div class="rs-sidebar rs-pull-right">
+            <div class="rs-inner"></div>
           </div>
-          <div class="content rs-panel">
-            <div class="inner"></div>
+          <div class="rs-content rs-panel">
+            <div class="rs-inner"></div>
           </div>
         </div>
         <!-- Sidebar (Left, Panel) -->
-        <div class="main rs-panel">
-          <div class="sidebar rs-pull-right">
-            <div class="inner"></div>
+        <div class="rs-main rs-panel">
+          <div class="rs-sidebar rs-pull-right">
+            <div class="rs-inner"></div>
           </div>
-          <div class="content rs-panel">
-            <div class="inner"></div>
+          <div class="rs-content rs-panel">
+            <div class="rs-inner"></div>
           </div>
         </div>
         <!-- Full-Width Content -->
-        <div class="main">
-          <div class="content rs-panel"></div>
+        <div class="rs-main">
+          <div class="rs-content rs-panel"></div>
         </div>
       </div>
       <!-- Grid -->
-      <div class="l-container show-grid">
-
+      <div class="rs-container show-grid">
         <p>12 column grid</p>
         <div class="rs-row">
           <div class="span-12">.span-12</div>
@@ -357,21 +356,18 @@
           <div class="span-2 offset-1">.span-2 .offset-1</div>
           <div class="span-3 offset-6">.span-3 .offset-6</div>
         </div>
-
       </div>
-
     </div>
-
-    <div class="l-push"></div>
+    <div class="rs-push"></div>
   </div>
-  <div class="l-footer">
-    <div class="l-container footer">
-      <ul class="links">
+  <div class="rs-footer">
+    <div class="rs-container">
+      <ul class="rs-links">
         <li>&copy; 2013 Rackspace, US</li>
         <li><a href="">Link Text</a></li>
         <li><a href="">Link Text</a></li>
       </ul>
-      <p class="link rs-pull-right">Pull right for <a href="#">Feedback</a></p>
+      <p class="rs-link rs-pull-right">Pull right for <a href="#">Feedback</a></p>
     </div>
   </div>
 </body>
