[Bug][113] Handle form labels that wrap.

--- a/examples/screenshots/forms.html
+++ b/examples/screenshots/forms.html
@@ -90,7 +90,7 @@
     <fieldset>
       <legend>Horizontal Form</legend>
       <div class="rs-control-group">
-        <label class="rs-control-label">One</label>
+        <label class="rs-control-label">One is a really long label that wraps, but Canon still works</label>
         <div class="rs-controls">
           <input type="text">
           <span class="rs-help-inline">This is inline help text.</span>
@@ -159,7 +159,7 @@
     <fieldset>
       <legend>Create Form</legend>
       <div class="rs-control-group">
-        <label class="rs-control-label">One</label>
+        <label class="rs-control-label">One is a really long label that wraps, but Canon still works</label>
         <div class="rs-controls">
           <input type="text">
           <span class="rs-help-inline">This is inline help text.</span>
