Update grid to use prefixed responsive class.

--- a/examples/demos/index.html
+++ b/examples/demos/index.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" type="text/css" href="/assets/canon.css">
 </head>
-<body class="responsive">
+<body class="rs-responsive">
   <h1>Typography</h1>
   <h2 class="rs-page-title">Typography</h2>
   <h3>Typography</h3>
