--- a/examples/functional/tooltip.html
+++ b/examples/functional/tooltip.html
@@ -25,7 +25,7 @@
 
   </style>
 </head>
-<body class="responsive">
+<body class="rs-responsive">
   <div class="container">
     <div class="controls">
       <button class="rs-btn" onclick="javascript: attach();">Attach</button>
