--- a/examples/screenshots/menu.html
+++ b/examples/screenshots/menu.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" type="text/css" href="/assets/canon.css">
 </head>
-<body class="responsive" style="background: #fff;">
+<body class="rs-responsive" style="background: #fff;">
   <div style="padding: 40px;">
     <div class="rs-dropdown">
       <a href="#" class="rs-btn rs-dropdown-toggle">Action Menu (Hidden)</a>
