[Bug][97] Add support for HTML in tooltips.

--- a/examples/functional/tooltip.html
+++ b/examples/functional/tooltip.html
@@ -32,7 +32,7 @@
       <button class="rs-btn" onclick="javascript: show();">Show</button>
       <button class="rs-btn" onclick="javascript: hide();">Hide</button>
     </div>
-    <i class="icon-help" title="I'm a tooltip."></i>
+    <i class="icon-help" title="<i>I'm a tooltip.</i>"></i>
   </div>
 
   <script src="http://code.jquery.com/jquery-1.10.0.min.js"></script>
